ec2.yml
Parameters:
  KeyNameJenkins:
    Description: Nombre del par de llaves (pem) que se usará en la instancia de Jenkins
    Type: AWS::EC2::KeyPair::KeyName
    Default: key_jenkins

  KeyNameApache:
    Description: Nombre del par de llaves (pem) que se usará en la instancia de Apache
    Type: AWS::EC2::KeyPair::KeyName
    Default: key_apache

Resources:
  VPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: 10.0.0.0/16
      EnableDnsSupport: true
      EnableDnsHostnames: true
      Tags:
        - Key: name
          Value: vpc-trabajo

  InternetGateway:
    Type: AWS::EC2::InternetGateway

  AttachGateway:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId: !Ref VPC
      InternetGatewayId: !Ref InternetGateway

  RouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC

  Route:
    Type: AWS::EC2::Route
    DependsOn: AttachGateway
    Properties:
      RouteTableId: !Ref RouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref InternetGateway

  Subnet:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      CidrBlock: 10.0.1.0/24
      MapPublicIpOnLaunch: false

  SubnetRouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref Subnet
      RouteTableId: !Ref RouteTable

  # ────────── SEGURIDAD ──────────
  GrupoSeguridadJenkins:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: SG Jenkins
      VpcId: !Ref VPC
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 8080
          ToPort: 8080
          CidrIp: 0.0.0.0/0

  GrupoSeguridadApache:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: SG Apache
      VpcId: !Ref VPC
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0

  JenkinsEIP:
    Type: AWS::EC2::EIP
    Properties:
      Domain: vpc
      Tags:
        - Key: Name
          Value: jenkins-eip

  ApacheEIP:
    Type: AWS::EC2::EIP
    Properties:
      Domain: vpc
      Tags:
        - Key: Name
          Value: apache-eip

  instanciaJenkins:
    Type: AWS::EC2::Instance
    Properties:
      ImageId: ami-04b4f1a9cf54c11d0
      InstanceType: t2.micro
      KeyName: !Ref KeyNameJenkins
      SubnetId: !Ref Subnet
      SecurityGroupIds:
        - !Ref GrupoSeguridadJenkins
      Tags:
        - Key: Name
          Value: instanciaJenkins
      UserData:
        Fn::Base64: !Sub |
          #!/bin/bash
          apt-get update -y
          apt-get upgrade -y
          apt-get install -y apt-transport-https ca-certificates curl software-properties-common fontconfig openjdk-17-jre
          curl -fsSL https://pkg.jenkins.io/debian-stable/jenkins.io-2023.key | gpg --dearmor -o /usr/share/keyrings/jenkins-keyring.gpg
          echo "deb [signed-by=/usr/share/keyrings/jenkins-keyring.gpg] https://pkg.jenkins.io/debian-stable binary/" > /etc/apt/sources.list.d/jenkins.list
          apt-get update -y
          apt-get install -y jenkins
          systemctl start jenkins
          systemctl enable jenkins
      NetworkInterfaces:
        - DeviceIndex: 0
          SubnetId: !Ref Subnet
          GroupSet: [!Ref GrupoSeguridadJenkins]
          AssociatePublicIpAddress: false

  instanciaApache:
    Type: AWS::EC2::Instance
    Properties:
      ImageId: ami-04b4f1a9cf54c11d0
      InstanceType: t2.micro
      KeyName: !Ref KeyNameApache
      SubnetId: !Ref Subnet
      SecurityGroupIds:
        - !Ref GrupoSeguridadApache
      Tags:
        - Key: Name
          Value: instanciaApache
      UserData:
        Fn::Base64: !Sub |
          #!/bin/bash
          apt-get update -y
          apt-get upgrade -y
          apt-get install -y apt-transport-https ca-certificates curl software-properties-common
          curl -fsSL https://download.docker.com/linux/ubuntu/gpg | apt-key add -
          add-apt-repository "deb [arch=amd64] https://download.docker.com/linux/ubuntu jammy stable"
          apt-get update -y
          apt-get install -y docker-ce docker-ce-cli containerd.io
          systemctl start docker
          systemctl enable docker
          git clone https://github.com/cesarpalacios/JenkinsGTN.git
          cd JenkinsGTN
          docker compose up -d
          apt-get install -y openjdk-17-jre
      NetworkInterfaces:
        - DeviceIndex: 0
          SubnetId: !Ref Subnet
          GroupSet: [!Ref GrupoSeguridadApache]
          AssociatePublicIpAddress: false

  JenkinsEIPAssociation:
    Type: AWS::EC2::EIPAssociation
    Properties:
      AllocationId: !GetAtt JenkinsEIP.AllocationId
      InstanceId:   !Ref instanciaJenkins

  ApacheEIPAssociation:
    Type: AWS::EC2::EIPAssociation
    Properties:
      AllocationId: !GetAtt ApacheEIP.AllocationId
      InstanceId:   !Ref instanciaApache

Outputs:
  JenkinsPublicIP:
    Description: IP pública fija de Jenkins
    Value: !Ref JenkinsEIP
  ApachePublicIP:
    Description: IP pública fija de Apache
    Value: !Ref ApacheEIP
